* [#173](https://github.com/upfrontsystems/izinto-angular/issues/173) Add Query model and view
* [#179](https://github.com/upfrontsystems/izinto-angular/issues/179) Link queries per dashboard
* [#197](https://github.com/upfrontsystems/izinto-angular/issues/197) Add optional date selector flag to dashboard

0.6
---

### Issue Fixes
* [#150](https://github.com/upfrontsystems/izinto-angular/issues/150) Enable gzip compression
* [#160](https://github.com/upfrontsystems/izinto-angular/issues/160) Refactor Dashboard to render HTML content

0.5
---

- Initial version.

### Issue Fixes
* [#13](https://github.com/upfrontsystems/izinto-angular/issues/13) add variable model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add collection model and views
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add dashboards in collections reorder
* [#14](https://github.com/upfrontsystems/izinto-angular/issues/14) add pasting dashboards and collections
* [#17](https://github.com/upfrontsystems/izinto-angular/issues/17) add single stat
* [#19](https://github.com/upfrontsystems/izinto-angular/issues/19) add reorder to chart
* [#20](https://github.com/upfrontsystems/izinto-angular/issues/20) add data source
* [#21](https://github.com/upfrontsystems/izinto-angular/issues/21) add logged in user to dashboard and collection
* [#29](https://github.com/upfrontsystems/izinto-angular/issues/29) fix reordering of charts and dashboards
* [#24](https://github.com/upfrontsystems/izinto-angular/issues/24) do not filter dashboards in collection by user
* [#35](https://github.com/upfrontsystems/izinto-angular/issues/35) add decimals for rounding chart labels
* [#38](https://github.com/upfrontsystems/izinto-angular/issues/38) remove group by from chart
* [#57](https://github.com/upfrontsystems/izinto-angular/issues/38) can't update user role
* [#63](https://github.com/upfrontsystems/izinto-angular/issues/38) optionally include dashboards in collections list